﻿10.24 -> 1.00

General
 • Enabled ground deformation
 • Wreckage/heaps have the same HP as regular unit HP (~33% increase)
 • Increased maxslope for all units 50% (the slope it allows to be build on)
 • Units gain xp (ranks) faster, also relatively more health/firerate compared the the same old xp
 • Air collisions for bombers removed

Units
 • T1 metal extractors use 3 Energy to operate, also slightly reduced buildprice
 • Ground scouts (vehicles/bot): 10% more LoS
 • T1 vehicle artillery has faster projectile and does 2x more damage per shot, but also has 2x reloadtime.
 • Decreased cormaw damage 27%
 • Claw/Zeus: lightning chains again (up to 2 neighbouring units *0.5dmg for zeus, *0.325 for claw)
 • Karganeth: Removed aa missile
 • Juggernaut: main weapon does 4x old damage/reloadtime
 • added experimental ARM T3 unit: Giant Invader, crawling nuclear bomb
 • EMP launcher: reduced range 10%

Renamed units:
 • Pack0 -> Ferret
 • Gaat Gun -> Warden


10.23 -> 10.24
24/02/2019

Balanced Annihilation 10.24, the game this was based on.