@@ -77,36 +77,50 @@ return {
 		},
 		weapondefs = {
 			med_emg = {
-				areaofeffect = 8,
+				accuracy = 13,
+				areaofeffect = 16,
 				avoidfeature = false,
-				burst = 3,
-				burstrate = 0.23333,
+				burst = 5,
+				burstrate = 0.105,
+				burnblow = false,
 				craterareaofeffect = 0,
 				craterboost = 0,
 				cratermult = 0,
-				edgeeffectiveness = 0.15,
-				explosiongenerator = "custom:plasmahit-small",
+				duration = 0.035,
+				edgeeffectiveness = 0.5,
+				explosiongenerator = "blank",
 				impulseboost = 0.123,
 				impulsefactor = 0.123,
 				intensity = 0.8,
-				name = "Rapid-fire a2g plasma guns",
+				name = "Rapid-fire a2g machine guns",
 				noselfdamage = true,
+				ownerExpAccWeight = 2.0,
 				range = 350,
-				reloadtime = 0.7,
+				reloadtime = 1.65,
 				rgbcolor = "1 0.95 0.4",
-				size = 2.25,
+				--size = 2.25,
+				soundhit = "bimpact3",
 				soundhitwet = "splshbig",
-				soundstart = "brawlemg",
+				soundstart = "mgun3",
 				sprayangle = 1024,
+				thickness = 0.9,
 				tolerance = 6000,
 				turret = false,
 				weapontimer = 1,
-				weapontype = "Cannon",
-				weaponvelocity = 350,
+				weapontype = "LaserCannon",
+				weaponvelocity = 800,
+				customparams = {
+					light_color = "1 0.9 0.15",
+					light_radius_mult = 0.6,
+					light_mult = 1.7,
+					expl_light_radius_mult = 0.05,
+					expl_light_mult = 0.1,
+					expl_light_color = "1 0.9 0.15",
+				},
 				damage = {
 					bombers = 1,
 					commanders = 5,
-					default = 9,
+					default = 11,
 					fighters = 1,
 					subs = 1,
 					vtol = 1,
